java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldMethod2-hints.pass
Create Local Variable t
Create Field t in org.netbeans.test.java.hints.CreateFieldMethod2
Create Parameter t
